Update Lecture_17.md